[project]
name = "video-depth-anything"
version = "0.1.0"
description = "Video Depth Anything"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy==1.24.0",
    "torch==2.12.0",
    "torchvision==0.27.0",
    "opencv-python",
    "matplotlib",
    "pillow",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.4.7",
    "decord",
    "xformers==0.0.23",
    "einops==0.8.0",
    "easydict",
    "tqdm",
    "OpenEXR==3.3.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
