[project]
name = "video-depth-anything"
version = "0.1.0"
description = "Video Depth Anything"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "opencv-python",
    "matplotlib",
    "pillow",
    "imageio",
    "imageio-ffmpeg",
    "decord",
    "xformers",
    "einops",
    "easydict",
    "tqdm",
    "OpenEXR"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
